<resources>
    <string name="app_name" translatable="false">All in One Calendar</string>

    <string name="periodStart">The onset of menstruation</string>
    <string name="periodLenght">How long does your period last?</string>
    <string name="cycleLenght">How long does your menstrual cycle last?</string>
    <string name="logOutButton">Log out</string>
    <string name="settings">Color settings</string>
    <string name="chooseColor">Choose your color theme</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="save">Save</string>
    <string name="edit_period_data_activity_label">Menstrual cycle</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_dialog_message">Delete all data?</string>
    <string name="delete_all">Delete all data</string>
    <string name="header">Menu</string>
    <string name="Calendar">Calendar</string>
    <string name="Shifts">Shifts</string>
    <string name="Coworkers">Coworkers</string>
    <string name="PersonalGrowth">Personal growth</string>
    <string name="CyclicalEvents">Cyclical events</string>
    <string name="FrequentActivities">Frequent activities</string>
    <string name="OneTimeEvents">Events</string>
    <string name="LifeAims">Your goals</string>
    <string name="lifePurpose">Where would you like to be in 5 years?</string>
    <string name="fiveYearsPlan">What will you do to achieve this?</string>
    <string name="thisYearsPlan">What will you do this year?</string>
    <string name="thisMonthPlan">What will you do this month?</string>
    <string name="OneDayPlan">What will you do today?</string>
    <string name="lifeAims">Goal</string>
    <string name="bigPlan">Plan</string>
    <string name="thisYear">Year</string>
    <string name="thisMonth">Month</string>
    <string name="dayPlan">Day</string>
    <string name="tasks">Add your task</string>
    <string name="shift_name">Shift</string>
    <string name="schedule">Schedule</string>
    <string name="alarm">Alarm</string>
    <string name="edit">Edit shift</string>
    <string name="empty_view_title">Add shift</string>
    <string name="hintShiftName">1 or \"morn\"</string>
    <string name="hintAlarm"> 06:00</string>
    <string name="shiftStart">Start time</string>
    <string name="shiftLenght">Working hours</string>
    <string name="hintShiftLenght">10</string>
    <string name="hours">hours</string>
    <string name="addShiftName">New shift</string>
    <string name="settingShifts"> Insert shifts</string>
    <string name="snack_bar_text">Shift deleted</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="deleteAllShifts">Delete all shifts</string>
    <string name="activitiesList">Frequent activities list:</string>
    <string name="addFrequentActivities">Add frequent activities</string>
    <string name="descriptionFrequentActivities">Add all the events that happen often and
        which you would like to easily add from the list to your calendar</string>
    <string name="cyclicalEventsList">Cyclical events list</string>
    <string name="addCyclicalEvents">Add cyclical events</string>
    <string name="descriptionCyclicalEvents">Add all events that occur periodically
        and you want them to be marked on the calendar automatically</string>
    <string name="period">How long?</string>
    <string name="eventName">Event name:</string>
    <string name="AimDeletedSnackBar">Aim deleted</string>
    <string name="ToDo">To do list</string>
    <string name="dailySchedule">Daily schedule</string>
    <string name="Monday">MON</string>
    <string name="Tuesday">TUE</string>
    <string name="Wednesday">WED</string>
    <string name="Thursday">THR</string>
    <string name="Friday">FRI</string>
    <string name="Saturday">SAT</string>
    <string name="Sunday">SUN</string>
    <string name="_hours">10</string>
    <string name="minutes">minutes</string>
    <string name="numberOfHours">10</string>
    <string name="espandedListViewTitles">expandedListViewTitle</string>
    <string name="dialog_title_auth">Authentication is required to continue</string>
    <string name="dialog_msg_auth">This app uses authentication to protect your data.</string>
    <string name="alarmClockOff">Alarm clock off </string>
    <string name="startDate">Date</string>
    <string name="how_often">How often</string>
    <string name="what_time">What time</string>
    <string name="birthday">Birthday</string>
    <string name="every">Every</string>
    <string name="two">2</string>
    <string name="years">year(s)</string>
    <string name="same_day_every_month">Same day of month</string>
    <string name="ok">OK</string>
    <string name="days">Days</string>
    <string name="months">Months</string>
    <string name="Years">Years</string>
    <string name="weeks">Weeks</string>
    <string name="questionMark">\?</string>
    <string name="day">day(s)</string>
    <string name="week">week(s)</string>
    <string name="month">month(s)</string>
    <string name="up_to_the_selected_number_of_occurrences">How many times?</string>
    <string name="to_date">To date:</string>
    <string name="on_and_on">On and on</string>
    <string name="upcoming_occurance">Upcoming occurrence</string>
    <string name="show_statistics">Show statistics</string>
    <string name="your_average_effectiveness">Your average effectiveness</string>
    <string name="notification">Notification</string>
    <string name="add_new_hour">Add new hour</string>
    <string name="reset">Turn off the alarm</string>
    <string name="imageMessage">To download image from the Internet you need to long press the image and choose \"Share image\" via All In One Calendar</string>
    <string name="fiveYears">Quinquennial:</string>
    <string name="noData">No data available</string>
    <string name="oneYear">Annual:</string>
    <string name="oneMonth">Monthly:</string>
    <string name="oneDay">Daily:</string>
    <string name="effectiveness">Effectiveness: </string>
    <string name="timeLeft">Time left: </string>
    <string name="hoursLeft">h</string>
    <string name="daysLeft">day(s)</string>
    <string name="yearsLeft">year(s), </string>
    <string name="alarmOn">Alarm clock set:</string>
    <string name="noAlarm">no alarm provided</string>
    <string name="copied">Copied</string>
    <string name="until">Until</string>
    <string name="times">times</string>
    <string name="Times">Times:</string>
    <string name="requirements">Name of the event, it\'s start date and frequency are required</string>
    <string name="ofTheMonth">of the  month</string>
    <string name="first">first</string>
    <string name="second">second</string>
    <string name="third">third</string>
    <string name="fourth">fourth</string>
    <string name="fifth">fifth</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="average_cycle_length">Average cycle length:</string>
    <string name="average_period_length">Average period length:</string>
    <string name="period_length">Period</string>
    <string name="cycle_length">Cycle</string>
    <string name="daysPlural">days</string>
    <string name="monthsPlural">months</string>
    <string name="delete_last">Delete last period</string>
    <string name="deleteOne">Delete</string>
    <string name="add_notification">Add notification</string>
    <string name="title">Title</string>
    <string name="add_notification_title">Add notification title</string>
    <string name="_06_00">06:00</string>
    <string name="find_colleagues">Find your colleagues</string>
    <string name="enter_email">Enter your friend\'s email address</string>
    <string name="colleagues">Colleagues:</string>
    <string name="add_friends">Add friends</string>
    <string name="show_shifts">Show shifts</string>
    <string name="aim">Aims</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="about_app">About application</string>
    <string name="ForGirls">Menstrual cycle</string>
    <string name="dayLeft">day</string>
    <string name="yearLeft">year</string>
    <string name="yearsLeft5">days</string>
    <string name="task">Task:</string>
    <string name="share">Share work schedule</string>
    <string name="no_shifts">No shifts added</string>
    <string name="add_shift">Add shift</string>
    <string name="name">Name</string>
    <string name="confirm_and_add">Confirm and add</string>
    <string name="clean">Clean</string>
    <string name="work">Work</string>
    <string name="add">Add</string>
    <string name="events">Events</string>
    <string name="tasks_to_be_done">Tasks to be done</string>
    <string name="back">Undo changes</string>
    <string name="to_do_list">To-do list</string>
    <string name="add_calendar">Add a calendar</string>
    <string name="workIcon">Work icon</string>
    <string name="eventsIcon">Events icon</string>
    <string name="effectiveness_toolbar">Effectiveness</string>
    <string name="periodStartDate">" Date of the onset of menstruation"</string>
    <string name="months5">months</string>
    <string name="without_changes">without changes</string>
    <string name="newEvent">New event</string>
    <string name="duration">Duration</string>
    <string name="resetNotification">Disable notification</string>
    <string name="close">Close</string>
    <string name="no_plans">You have no plans for the next 7 days</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="add_task">Add task</string>
    <string name="add_event">Add event</string>
    <string name="edit_shift">Edit shift</string>

</resources>
