<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_for_calendar"
            android:title="@string/Calendar"
           />
        <item
            android:id="@+id/nav_for_girlsActivity"
            android:title="@string/ForGirls" />
        <item
            android:id="@+id/nav_shifts_activity"
            android:title="@string/Shifts" />

        <item
            android:id="@+id/nav_coworker_activity"
            android:title="@string/Coworkers" />

        <item
            android:id="@+id/nav_events_activity"
            android:title="@string/events">

            <menu>
                <item
                    android:id="@+id/cyclicalEvents"
                    android:title="@string/cyclicalEvents" />
                <item
                    android:id="@+id/frequentActivities"
                    android:title="@string/frequentActivities" />
            </menu>

        </item>



    </group>


</menu>