<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".forGirls.ForGirlsFragment">
    <item
        android:id="@+id/action_delete_all_entries"
        android:title="@string/delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_drawer"
        android:title="@string/addFrequentActivities"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_notification"
        android:title="@string/add_notification"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_hour"
        android:title="@string/add_new_hour"
        android:visible="false"
        app:showAsAction="never" />


</menu>