<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/settingShifts"
        android:title="@string/settingShifts"
        android:icon="@drawable/baseline_add_white_48"
        app:iconTint="@color/darkGreyZilla"
        app:showAsAction="never" />

    <item
        android:id="@+id/deleteShifts"
        android:title="@string/deleteAllShifts"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/baseline_share_white_18"
        app:iconTint="@color/checkboxGreyZilla"
        android:title="@string/share"
        app:showAsAction="never"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/showShifts"
        android:checkable="true"
        android:title="@string/show_shifts"
        app:showAsAction="never" />



</menu>