<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    style="@style/BackgroundLayout"
    android:background="@color/lightGrey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageBackground"
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <LinearLayout style="@style/BackgroundLayout.LinearLayoutVerticalStyle.shortContent">

            <TextView
                android:id="@+id/title"
                style="@style/textViewHeaders"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/colorWhite"
                tools:text="@string/fiveYearsPlan" />

            <CheckBox
                android:id="@+id/checkboxToday"
                style="@style/personalGrowthCheckBoxStyle"
                android:text="@string/today"
                android:visibility="gone">

            </CheckBox>

            <CheckBox
                android:id="@+id/checkboxTomorrow"
                style="@style/personalGrowthCheckBoxStyle"
                android:text="@string/tomorrow"
                android:visibility="gone">

            </CheckBox>

            <include layout="@layout/recycleview_and_edittext" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>