<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundLayout"
    android:background="@color/lightOrangeZilla"
    android:padding="10dp">

    <TableLayout
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/row"
            style="@style/BackgroundLayout.LinearLayoutHorizontalStyle.shortContent">

            <TextView
                android:id="@+id/title_label"
                style="@style/ShiftsTextViewLabelStyle"
                android:gravity="start"
                android:paddingStart="10dp"
                android:text="@string/shift_name"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/price_label"
                style="@style/ShiftsTextViewLabelStyle"
                android:text="@string/schedule" />

            <TextView
                android:id="@+id/quantity_label"
                style="@style/ShiftsTextViewLabelStyle"
                android:text="@string/alarm" />

        </LinearLayout>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/empty_shelf_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/baseline_access_time_black_48"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/empty_title_text"
            style="@style/EmptyViewTextStyle"
            android:layout_below="@id/empty_shelf_image"
            android:text="@string/empty_view_title" />

    </RelativeLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        android:src="@drawable/baseline_add_white_48"
        android:visibility="gone"
        app:backgroundTint="@color/darkOrangeZilla" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_shifts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label"
        android:orientation="vertical"
        android:padding="5dp" />

</RelativeLayout>

